--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
+    "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
     "axios": "^1.7.9",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.6",
@@ -17,7 +18,8 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.5.1"
+    "react-hot-toast": "^2.5.1",
+    "stripe": "^17.6.0"
   },
   "devDependencies": {
     "daisyui": "^4.11.1",
