--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
     "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
+    "@next/font": "^14.2.15",
     "axios": "^1.7.9",
     "bad-words": "^4.0.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.6",
-    "next": "^14.2.23",
+    "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
