--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web-projects",
-  "version": "0.1.0",
+  "name": "ads-manager",
+  "version": "1.0.0 Alpha",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -24,6 +24,7 @@
     "stripe": "^17.6.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.0",
