--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@next/font": "^14.2.15",
     "axios": "^1.7.9",
     "bad-words": "^4.0.0",
+    "chart.js": "^4.4.8",
+    "facebook-nodejs-business-sdk": "^22.0.0",
+    "google-ads-node": "^15.0.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.6",
     "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.1",
     "stripe": "^17.6.0"
